fix: proposal feedback (#582)
* fix(proposal-detail): switching network crashed app

* feat(markdown): headers should not have underline

* fix(proposal-table): incorrect widths

* fix(proposal-table): use mock data and fix token symbol

* fix(proposal): vote buttons should be equal size

* fix(vote): footer text too small

* fix(vote): font color needs to be grey

* fix(vote): center footer text

* feat(markdown-viewer): handle links properly
Correct styling
Link to _blank

* fix(vote): round bar percentage labels

* fix(vote): match history to Snapshot
Remove amount label, append token symbol to power

* feat(proposal): hide vote bar when no votes

* feat(vote): more accurate "vote in progress" text in footer

* feat(proposals): right align loading spinners

* feat(proposals): filter older proposals for prototype

* feat(proposals): adjust attributes to match Snapshot

* fix(proposals): more graceful handling of undefined USD amount

* feat(daos): hide non-prototype DAOs

* fix(generic-table): hide toggle buttons when no search bar

* fix(proposals): incorrect top margin

--- a/src/components/MarkDown/MarkDown.module.scss
+++ b/src/components/MarkDown/MarkDown.module.scss
@@ -23,4 +23,18 @@
 		padding: 1rem;
 		background-color: unset;
 	}
+
+	h1, h2, h3, h4, h5, h6 {
+		border: none;
+	}
+
+	a {
+		color: var(--color-accent-1);
+		text-decoration: none !important;
+		transition: text-shadow var(--animation-time-short) ease-in-out;
+
+		&:hover {
+			text-shadow: var(--glow-text-primary) !important;
+		}
+	}
 }
